Added new internal route
