# api/routes/internal/creature/inventory.py
@@ -1,0 +1,70 @@
+# -*- coding: utf8 -*-
+
+from flask                      import jsonify, request
+from loguru                     import logger
+
+from mysql.methods.fn_creature  import fn_creature_get
+from mysql.methods.fn_inventory import fn_item_get_all
+
+
+from variables                  import API_INTERNAL_TOKEN
+
+#
+# Routes /internal
+#
+
+
+# /internal/creature/*
+# API: GET /internal/creature/{creatureid}/inventory
+def creature_inventory_get(creatureid):
+    if request.headers.get('Authorization') != f'Bearer {API_INTERNAL_TOKEN}':
+        msg = 'Token not authorized'
+        logger.warning(msg)
+        return jsonify(
+            {
+                "success": False,
+                "msg": msg,
+                "payload": None,
+            }
+        ), 403
+
+    # Pre-flight checks
+    creature    = fn_creature_get(None, creatureid)[3]
+    if creature is None:
+        msg = f'Creature not found (creatureid:{creatureid})'
+        logger.warning(msg)
+        return jsonify(
+            {
+                "success": False,
+                "msg": msg,
+                "payload": None,
+            }
+        ), 200
+    else:
+        h = f'[Creature.id:{creature.id}]'  # Header for logging
+
+    try:
+        creature_inventory = fn_item_get_all(creature)
+    except Exception as e:
+        msg = f'{h} Inventory Query KO [{e}]'
+        logger.error(msg)
+        return jsonify(
+            {
+                "success": False,
+                "msg": msg,
+                "payload": None,
+            }
+        ), 200
+    else:
+        msg = f'{h} Inventory Query OK'
+        logger.debug(msg)
+        return jsonify(
+            {
+                "success": True,
+                "msg": msg,
+                "payload": {
+                    "inventory": creature_inventory,
+                    "creature": creature,
+                    },
+            }
+        ), 200
